@@ -1,5 +1,6 @@
 2006-06-19 Sandro Santilli <strk@refractions.net>
 
+	* geom::GeometryFactory (cpp,h,inl): port info and doxygen dox.
 	* tests/xmltester/XMLTester.cpp: tolerate invalid inputs.
 
 2006-06-14 Sandro Santilli <strk@refractions.net>
